tests/cases/error/error_invalid_instruction.out
error: parsing error: Unrecognized token
 --> tests/cases/error/error_invalid_instruction.rapt:1:1
  |
1 | FLORG --foo "bar"
  | ^^^^^ Unrecognized token
2 | RUN ls -l
3 | RUN ls -l
4 | RUN ls -l
5 | RUN ls -l
6 | RUN ls -l
7 |
  |
  = Expected one of: COMMENT, NEWLINE, "CMD", "COPY", "ENTRYPOINT", "ENV", "FROM", "INCLUDE", "INVOKE", "MKDIR", "MOUNT", "RENDER", "RUN", "WORKDIR", "WRITE"
